@@ -35,4 +35,6 @@ ARM_LDSCRIPT = "eb40a_ram"
 MCU_AT91R40008 = ""
 NUTMEM_SIZE = "0x1FF00"
 NUTMEM_START = "0x100"
+NUT_THREAD_IDLESTACK = "1024"
+NUT_THREAD_MAINSTACK = "1024"
 NUT_CPU_FREQ = "66000000"
