@@ -34,6 +34,9 @@
 -- Nut/OS configuration for Ethernut 1.3 Rev-F and previous.
 --
 -- $Log$
+-- Revision 1.3  2004/11/08 18:58:58  haraldkipp
+-- Configurable stack sizes
+--
 -- Revision 1.2  2004/09/08 16:12:16  haraldkipp
 -- Updated and tested with 3.9.1
 --
@@ -46,6 +49,8 @@ NUTMEM_START = "0x100"
 NUTMEM_RESERVED = "64"
 NUTXMEM_SIZE = "28416"
 NUTXMEM_START = "0x1100"
+NUT_THREAD_IDLESTACK = "384"
+NUT_THREAD_MAINSTACK = "768"
 CONFOS_EE_OFFSET = "0"
 RTL_BASE_ADDR = "0x8300"
 RTL_SIGNAL_IRQ = "INT5"
