@@ -34,6 +34,9 @@
 -- Nut/OS configuration for Ethernut 2.1 Rev-B.
 --
 -- $Log$
+-- Revision 1.2  2004/11/08 18:58:58  haraldkipp
+-- Configurable stack sizes
+--
 -- Revision 1.1  2004/09/08 16:12:16  haraldkipp
 -- Updated and tested with 3.9.1
 --
@@ -50,6 +53,8 @@ NUTBANK_COUNT = "30"
 NUTBANK_START = "0x8000"
 NUTBANK_SIZE = "0x4000"
 NUTBANK_SR = "0xFF00"
+NUT_THREAD_IDLESTACK = "384"
+NUT_THREAD_MAINSTACK = "768"
 CONFOS_EE_OFFSET = "0"
 LANC111_SIGNAL_IRQ = "INT5"
 RTL_BASE_ADDR = "0x8300"
