@@ -1,6 +1,49 @@
+--
+-- Copyright (C) 2004 by egnite Software GmbH. All rights reserved.
+--
+-- Redistribution and use in source and binary forms, with or without
+-- modification, are permitted provided that the following conditions
+-- are met:
+--
+-- 1. Redistributions of source code must retain the above copyright
+--    notice, this list of conditions and the following disclaimer.
+-- 2. Redistributions in binary form must reproduce the above copyright
+--    notice, this list of conditions and the following disclaimer in the
+--    documentation and/or other materials provided with the distribution.
+-- 3. Neither the name of the copyright holders nor the names of
+--    contributors may be used to endorse or promote products derived
+--    from this software without specific prior written permission.
+--
+-- THIS SOFTWARE IS PROVIDED BY EGNITE SOFTWARE GMBH AND CONTRIBUTORS
+-- ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+-- LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
+-- FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL EGNITE
+-- SOFTWARE GMBH OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
+-- INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
+-- BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS
+-- OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
+-- AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
+-- OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
+-- THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
+-- SUCH DAMAGE.
+--
+-- For additional information see http://www.ethernut.de/
+--
+
+--
+-- Nut/OS configuration for Gameboy Advance and XPORT2
+--
+-- $Log$
+-- Revision 1.2  2004/11/08 18:58:58  haraldkipp
+-- Configurable stack sizes
+--
+--
+
 ARM_GCC_NOLIBC = ""
 ARM_LDSCRIPT = "gbaxport2"
 MCU_GBA = ""
-NUTMEM_SIZE = "0x1FF00"
-NUTMEM_START = "0x100"
-NUT_CPU_FREQ = "66000000"
+NUTMEM_SIZE = "0x00040000"
+NUTMEM_START = "0x02000000"
+NUT_THREAD_IDLESTACK = "4096"
+NUT_THREAD_MAINSTACK = "4096"
+NUT_CPU_FREQ = "16780000"
